<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">
    >

    <TableLayout
        android:layout_width="410dp"
        android:layout_height="730dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="4">

            <TextView
                android:id="@+id/newContactTextView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center|center_horizontal"
                android:text="@string/newContact"
                android:textAlignment="center"
                android:textColor="#273063"
                android:textSize="40sp" />

        </TableRow>

        <TableRow
            android:id="@+id/nameRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </TableRow>

        <TableRow
            android:id="@+id/addressRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editTextPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/phoneNumberRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/emailRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />
        </TableRow>

        <TableRow
            android:id="@+id/notesRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editTextNotes"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/notes"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false" />
        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/saveButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="saveContact"
                android:text="@string/saveButton" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="cancelContact"
                android:text="@string/cancelButton" />

            <Button
                android:id="@+id/addContact_clearButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:onClick="clearFields"
                android:text="@string/clear" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



